Added team privacy simple works started footer sections

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="mb-4">
                 <span class="d-md-block">File storage and sharing for</span>
                 <span class="d-md-block">remote teams that work</span>
-                <span class="d-md-block">together on <span class="my-text-primary">Web3</span></span>
+                <span class="d-md-block">together on <span class="my-text-primary">internet</span></span>
             </h1>
 
             <p class="mb-4">
@@ -107,7 +107,369 @@
             </div>
 
         </div>
+
+
+
     </section>
+
+     <section class="team">
+        <div class="container">
+
+            <div>
+                <h2 class="mb-5">
+                    Lightweight design, ready to use for team productivity.
+                </h2>
+            </div>
+
+            <div class="team-wrapper">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="text-center mb-4">
+                            <h3>File Sharing</h3>
+                            <p>Securely share files within or outside your organization, and control access, track
+                                edits, and analyze the shared content stats.</p>
+
+                            <img width="100%" src="./img/team/1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="text-center mb-4">
+                            <h3>Collect Files</h3>
+                            <p>You can collect and receive files in a secure environment, even if the other person
+                                doesn’t have a Deupload account.</p>
+
+                            <img width="100%" src="./img/team/2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-wrapper-2">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="text-center text-lg-start">
+                            <h3>Team collaboration in one simple place with privacy come first.</h3>
+                            <p>Securely share and work together with Deupload’s simple file storage and sharing,
+                                easy user management, unlimited file size, password protected links and more.
+                            </p>
+                            <div class="d-flex justify-content-center justify-content-lg-start gap-4">
+                                <a href="#" class="btn btn-outline-dark">Sign In</a>
+                                <a href="#" class="btn btn-primary">Create an account</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div>
+                            <img width="100%" src="./img/team/3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="privacy">
+        <div class="container">
+            <div class="privary-wrapper">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2 class="mb-4">
+                            <span class="d-lg-block">Decentralized</span>
+                            <span class="d-lg-block">storage built for</span>
+                            <span class="d-lg-block">better privacy.</span>
+                        </h2>
+                        <p class="mb-5">Store data securely on over 13k nodes worldwide instead of just a few vulnerable
+                            data centers with privacy. Every file is encrypted, split into pieces, and stored on a
+                            global network of nodes, making data breaches and downtime a thing of the past.</p>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="p-3">
+                                    <img class="mb-3" src="./img/privacy/icon.png" alt="">
+                                    <h6 class="mb-3">Upgrade your storage.</h6>
+                                    <p>Better security, performance and cost, Deupload is the better way to store data.
+                                    </p>
+                                    <a href="#" class="d-flex justify-content-between align-items-center">
+                                        <span>Learn use cases</span>
+                                        <img src="./img/privacy/arrow-1.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="p-3">
+                                    <img class="mb-3" src="./img/privacy/icon.png" alt="">
+                                    <h6 class="mb-3">Carbon neutral storage.</h6>
+                                    <p>Better security, performance and cost, Deupload is the better way to store data.
+                                    </p>
+                                    <a href="#" class="d-flex justify-content-between align-items-center">
+                                        <span>Learn use cases</span>
+                                        <img src="./img/privacy/arrow-2.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="d-flex align-items-start gap-3 p-4 mb-4">
+                            <img src="./img/privacy/1.png" alt="">
+                            <div>
+                                <h5>Private by design</h5>
+                                <p>We believe data privacy is a human right, which is why Deupload is built on a
+                                    decentralized architecture that makes data breaches a thing of the past.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-start gap-3 p-4
+                        mb-4">
+                            <img src="./img/privacy/1.png" alt="">
+                            <div>
+                                <h5>Distributed network</h5>
+                                <p>We believe data privacy is a human right, which is why Deupload is built on a
+                                    decentralized architecture that makes data breaches a thing of the past.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-start gap-3 p-4
+                        mb-4">
+                            <img src="./img/privacy/1.png" alt="">
+                            <div>
+                                <h5>Worldwide availability</h5>
+                                <p>We believe data privacy is a human right, which is why Deupload is built on a
+                                    decentralized architecture that makes data breaches a thing of the past.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="simple">
+        <div class="container">
+            <div class="text-center mt-5">
+                <h2>Simple. Fair pricing.</h2>
+                <p>Pay for what you use. There is no minimum charge. Always know what you’ll pay.</p>
+            </div>
+
+            <div class="simple-wrapper">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 p-lg-0">
+                        <div class="p-5 shadow">
+
+                            <div class="text-center">
+                                <h4 class="mb-3">Storage</h4>
+                                <img class="mb-3" src="./img/simple/line-1.png" alt="">
+                                <p class="mb-3">Access a complete decentralized storage with simple, pay-as-you-go
+                                    pricing</p>
+
+                                <h2 class="mb-3">$0.008</h2>
+                                <span class="mb-3">per GB/month</span>
+
+                                <a href="#" class="btn btn-primary d-block mb-4">Create an account</a>
+                            </div>
+
+                            <ul>
+                                <li>
+                                    <img src="./img/simple/tick.svg" alt="">
+                                    <span>Everything you need to storage & share files</span>
+                                </li>
+                                <li>
+                                    <img src="./img/simple/tick.svg" alt="">
+                                    <span>No fees for API requests or data retrievals</span>
+                                </li>
+                                <li>
+                                    <img src="./img/simple/tick.svg" alt="">
+                                    <span>No setup fees, monthly fees, or hidden fees</span>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6 p-lg-0">
+                        <div class="p-5">
+                            <h4>Transfer</h4>
+                            <img src="./img/simple/line-2.png" alt="">
+                            <p>Pay only for what you use. There is no minimum charge. You pay for all bandwidth into and
+                                out of Deupload.</p>
+
+                            <span class="badge bg-primary">Inbound</span>
+
+                            <div>
+                                <h3>$0.006</h3>
+                                <span>GB/month</span>
+                            </div>
+
+                            <span class="badge bg-primary">Outbound</span>
+
+                            <div>
+                                <h3>$0.006</h3>
+                                <span>GB/month</span>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="works">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2>How it works?</h2>
+                <p>
+                    <span class="d-lg-block">Deupload removes complexity and offers a simple interface that allows users
+                        to take</span>
+                    <span class="d-lg-block">advantage of the vast array of decentralized storage with better security,
+                        performance,</span>
+                    <span class="d-lg-block">and pricing.</span>
+                </p>
+            </div>
+            <div class="works-wrapper">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="text-center">
+                            <img class="mb-3" src="./img/works/1.png" alt="">
+                            <h3 class="mb-3">Create an account</h3>
+                            <p>Create an Deupload account and start uploading your files to Decentralized Storage.</p>
+                            <img src="./img/works/line.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="text-center">
+                            <img class="mb-3" src="./img/works/1.png" alt="">
+                            <h3 class="mb-3">Upload your files</h3>
+                            <p>Create an Deupload account and start uploading your files to Decentralized Storage.</p>
+                            <img src="./img/works/line.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="text-center">
+                            <img class="mb-3" src="./img/works/1.png" alt="">
+                            <h3 class="mb-3">Share file instantly</h3>
+                            <p>Create an Deupload account and start uploading your files to Decentralized Storage.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="started">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-lg-9">
+                    <div class="text-center text-lg-start">
+                        <h2>Ready to get started?</h2>
+                        <p>File storage and sharing on decentralized storage that suits any business size.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="text-center text-lg-end">
+                        <a href="#" class="btn btn-primary">Create an account</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="started-wrapper">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="text-center text-lg-start">
+                            <img class="mb-4" src="./img/started/1.svg" alt="">
+                            <h3 class="mb-4">Are you individual?</h3>
+                            <p>Syncing, backing up, and sharing your photos, videos and documents in total privacy couldn’t be easier.</p>
+                            <a href="#">
+                                <span>Start now</span>
+                                <img src="./img/started/right.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="test">
+                            <div class="row align-items-center">
+                                <div class="col-lg-6">
+                                    <div class="text-center text-lg-start">
+                                        <img class="mb-4" src="./img/started/2.png" alt="">
+                                        <h3 class="mb-4">Are you business?</h3>
+                                        <p>Work efficiently with teammates and clients, stay in sync on projects, and
+                                            keep company data safe—all in one place on decentralized network.</p>
+                                        <a href="#">
+                                            <span>See pricing</span>
+                                            <img src="./img/started/right.png" alt="">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="text-center text-lg-end">
+                                        <img src="./img/started/computer.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-wrapper">
+                <div class="row">
+                    <div class="col-lg-5 col-md-6">
+                        <div>
+                            <h4>What is Deupload?</h4>
+                            <p>Deupload is a cloud storage services based on Blockchain and Web3 technology, designed to help teams collaborate and file sharing in a completely private like never before.</p>
+
+                            <div class="d-flex align-items-center gap-3 mt-4">
+                                <img src="./img/footer/1.png" alt="">
+                                <img src="./img/footer/2.png" alt="">
+                                <img src="./img/footer/3.png" alt="">
+                                <img src="./img/footer/4.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6">
+                        <h4>Products</h4>
+
+                        <ul>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Solutions</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Token</a></li>
+                            <li><a href="#">Security</a></li>
+                            <li><a href="#">Comparison</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-2 col-md-6">
+                        <h4>Resource</h4>
+                        <ul>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Solutions</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Token</a></li>
+                            <li><a href="#">Security</a></li>
+                            <li><a href="#">Comparison</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4>Community</h4>
+                        <ul>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Solutions</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Token</a></li>
+                            <li><a href="#">Security</a></li>
+                            <li><a href="#">Comparison</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     
     
 
